fixing z-index of video in about us description

--- a/Webdev/Webdev-Website/about-us/about-us.css
+++ b/Webdev/Webdev-Website/about-us/about-us.css
@@ -71,7 +71,6 @@ body {
 }
 .about-us-description-container video {
     position: absolute;
-    z-index: -1;
     height: 100%;
     object-fit: cover;
     width: 100%;
